src/summary/snapshots/forge__summary__format__tests__format_dashboard_snapshot_with_color.snap
---
source: src/summary/format.rs
expression: output
---
┌──────────────────────────────────────────┐
│         [1mFORGE Conversion Summary[0m         │
├──────────────────────────────────────────┤
│ Strategy:           catalog              │
│ Output:             output/catalog.json  │
│ Elapsed:            0.42s                │
├──────────────────────────────────────────┤
│ Sections parsed:    12                   │
│ Requirements:       47                   │
│ Controls generated: 47                   │
│ Mapping coverage:   100.0% (47/47)       │
├──────────────────────────────────────────┤
│ Validation:         [32mPASSED[0m               │
└──────────────────────────────────────────┘
